fix layout bug on small screens on reader pages

--- a/public/css/reader-view.css
+++ b/public/css/reader-view.css
@@ -86,7 +86,7 @@ article .reader-view-social-links {
   padding-right: 20px;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1200px) {
   .edit-history-accordion {
     margin-bottom: 0;
   }
